--- a/style.css
+++ b/style.css
@@ -12,11 +12,9 @@ body {
 
 }
 
-#container {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 507px;
-
+#board {
+    display: grid;
+    width: 500px;
+    height: 500px;
+    border: solid;
 }
