--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body {
 
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 #board {
     display: grid;
     width: 500px;
