--- a/style.css
+++ b/style.css
@@ -9,13 +9,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #EEE5E9;
+}
 
+h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 70px;
+    margin: 0;
 }
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
 
 }
 
