--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #EEE5E9;
+    background-color: #E4DFDA;
 }
 
 h1 {
@@ -31,7 +31,20 @@ h1 {
     display: flex;
     justify-content: center;
     margin: 10px;
+    gap: 3px;
 
+}
+
+button {
+    background-color: white;
+    border: 2px solid #000000;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #21A0A0;
+    color: white;
 }
 
 #gridsize {
